# kittylog

./: .bumpversion.toml  .codecov.yml  .gitignore  .kittylog.env.example  AGENTS.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  USAGE.md  implementation_status.md  mypy.ini  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: prep_changelog_for_release.py
src/clog/: __init__.py  __version__.py  ai.py  changelog.py  cli.py  config.py  config_cli.py  errors.py  git.py  git_operations.py  init_changelog.py  init_cli.py  main.py  postprocess.py  prompt.py  update_cli.py  utils.py
src/kittylog/: __init__.py  __version__.py  ai.py  ai_utils.py  auth_cli.py  cache.py  changelog.py  changelog_io.py  changelog_parser.py  cli.py  commit_analyzer.py  config.py  config_cli.py  constants.py  errors.py  git_operations.py  init_changelog.py  init_changelog_cli.py  init_cli.py  language_cli.py  main.py  mode_handlers.py  model_cli.py  postprocess.py  prompt.py  prompt_cleaning.py  prompt_templates.py  release_cli.py  tag_operations.py  types.py  update_cli.py  utils.py  utils_logging.py  utils_system.py  utils_text.py  workflow.py  workflow_ui.py
src/kittylog/changelog/: __init__.py  boundaries.py  io.py  parser.py  updater.py
src/kittylog/config/: __init__.py  data.py  loader.py  options.py  secure.py
src/kittylog/constants/: audiences.py  env_defaults.py
src/kittylog/mode_handlers/: boundary.py  missing.py  unreleased.py
src/kittylog/oauth/: __init__.py  claude_code.py
src/kittylog/prompt/: __init__.py  json_schema.py  system_developers.py  system_stakeholders.py  system_users.py  user.py
src/kittylog/providers/: README.md  __init__.py  anthropic.py  azure_openai.py  base.py  base_configured.py  cerebras.py  chutes.py  claude_code.py  custom_anthropic.py  custom_openai.py  deepseek.py  error_handler.py  fireworks.py  gemini.py  groq.py  kimi_coding.py  lmstudio.py  minimax.py  mistral.py  moonshot.py  ollama.py  openai.py  openrouter.py  qwen.py  registry.py  replicate.py  streamlake.py  synthetic.py  together.py  zai.py
src/kittylog/ui/: __init__.py  banner.py  prompts.py
tests/: __init__.py  conftest.py  fixtures.py  test_additional_providers.py  test_ai.py  test_auth_cli.py  test_boundary_filtering_integration.py  test_boundary_insertion_order.py  test_bullet_limiting.py  test_cache.py  test_changelog.py  test_changelog_boundaries.py  test_changelog_discovery.py  test_changelog_io.py  test_cli.py  test_config.py  test_config_cli.py  test_config_secure.py  test_confirmation_functionality.py  test_context_entries.py  test_edge_cases.py  test_error_paths.py  test_errors.py  test_git.py  test_include_diff_integration.py  test_integration.py  test_json_schema.py  test_language_cli.py  test_language_codes.py  test_main.py  test_main_fixed.py  test_missing_entries_mode.py  test_model_cli.py  test_postprocess.py  test_provider_integration.py  test_system_users_prompt.py  test_tag_operations.py  test_ui_prompts.py  test_unreleased_mode.py  test_utils.py  (+2 more)
tests/oauth/: __init__.py  test_claude_code_oauth.py  test_qwen_oauth.py  test_reauth.py  test_token_store.py
tests/providers/: conftest.py  test_anthropic.py  test_azure_openai.py  test_cerebras.py  test_chutes.py  test_claude_code.py  test_custom_anthropic.py  test_custom_openai.py  test_deepseek.py  test_fireworks.py  test_gemini.py  test_groq.py  test_kimi_coding.py  test_lmstudio.py  test_minimax.py  test_mistral.py  test_moonshot.py  test_ollama.py  test_openai.py  test_openrouter.py  test_qwen.py  test_replicate.py  test_streamlake.py  test_synthetic.py  test_together.py  test_zai.py
(+3 files in other folders)
